kubernetes/apps/gameserver-satisfactory/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: satisfactory
spec:
  replicas: 1
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn-rc-2
      resources:
        requests:
          storage: 20Gi
  template:
    spec:
      containers:
        - name: satisfactory
          image: wolveix/satisfactory-server:v1
          resources:
            requests:
              cpu: "2500m"
              memory: "4Gi"
            limits:
              cpu: "4000m"
              memory: "6Gi"
          volumeMounts:
            - name: data
              mountPath: /config
