kubernetes/apps/gameserver-satisfactory/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-satisfactory
spec:
  type: LoadBalancer
  ports:
    - name: game-port-udp
      port: 7777
      targetPort: 7777
      protocol: UDP
    - name: gameport-port-tcp
      port: 7777
      targetPort: 7777
      protocol: TCP
    - name: servermessaginport-tcp
      port: 8888
      targetPort: 8888
      protocol: TCP
